:bug: Fixed app overflow

--- a/app/assets/styles/modules.styl
+++ b/app/assets/styles/modules.styl
@@ -3,6 +3,9 @@ body
   height 100vh
   font-size 62.5%
 
+.app
+  position fixed
+
 .blue-button
   margin-left 50%
   transform translateX(-50%)
